    fixed bug causing hangs when adding voices
    new "auto" possibility for setting breakpoints via "addbreakpoint"
    fixed bug causing stafflines attribute not to be saved sometimes
    improved display of auxiliary stems
    New "dltoslot" message to copy pitch and velocity envelopes to slots
    Fixed bug causing loss of slots and other data upon "paste @repeat N"

- bach.score: XML import: mismatched ties do not cause pitch misplacement on the second note
        Pickup measures are correctly imported
        Accidentals are correctly dealt with when importing multi-voice parts
        Fixed crash when importing empty lyrics with empty "text" tag
        Time signature can be inferred if not given
    XML import and export: three-quarters-sharp and -flat accidentals have correct name now (was "three-quarter")
        complex time signatures are correctly handled
    XML export: figures longer than a whole note are correctly exported
    symduration variable now works for measures as well
    @autocomplete attribute exposed
    fixed bug potentially causing weird behaviors while setting the score from gathered syntax if the clefs introduced were less than the number of voices
    fixed bug causing crashed when addtempo was called with improper syntax
    fixed bug sometimes causing wrong placement of dynamics in bach.score at the very end of a note
    fixed bug causing possible missing initial tempo in "subscore" command
    fixed wrong filename in MIDI score import help file
    @finitestaff: new attribute to trim staff after last measure
    @showfirstmeasurenumber: new attribute
    fixed bug causing possible wrong playback of partial notes' slots with ties
    new "lineareditquarterkey" attribute to set the number key corresponding to quarter note duration  
    fixed bug causing wrong positioning of dots with custom noteheads
    fixed bug causing wrong behavior upon "slice" message with respect to ties and glissandi

- bach.roll: